--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,3 +8,6 @@
 @import "users/sign_up";
 @import "users/sign_in";
 @import "users/show";
+@import "users/edit";
+@import "jTinder";
+@import "matching";
