--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,7 +11,9 @@
       <% @users.each do |user| %>
         <li data-user_id="<%= user.id %>">
           <div class="userName"><%= user.name %></div>
+          <% if user.img_name.present? %>
           <%= image_tag user.img_name.url %>
+          <% end %>
           <div class="like"></div>
           <div class="dislike"></div>
         </li>
